Fix 'User details not visible on profile page' - #119.

--- a/style/button.css
+++ b/style/button.css
@@ -453,6 +453,7 @@ div.discussionsubscription {
 }
 
 /* Message button margin (applies to all the elements) */
-#page-user-profile .node_category li, .path-user .node_category li {
+#page-user-profile .node_category li,
+.path-user .node_category li {
     margin-top: 15px;
 }
