--- a/style/user.css
+++ b/style/user.css
@@ -33,6 +33,14 @@
     margin-bottom: 5px;
 }
 
+#page-user-profile .node_category li.aduseropt {
+    margin: 0;
+}
+
+#page-user-profile .node_category li.aduseropt dl {
+    margin-bottom: 0;
+}
+
 #adaptable_profile_tree .ucol1 .node_category.contact {
     margin-top: 3.5em; /* Magic number to line up with tabs. */
 }
